# globetrotter

./: cache-model.ts  mise.toml  package.json  pyproject.toml  railpack.json
src/: APITester.tsx  index.ts
src/globetrotter/: __init__.py
src/server/: auth.ts  translate.ts
src/translate/: __init__.py  model.py
