[project]
name = "translate"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleks Rūtiņš",email = "keeper@farthergate.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "accelerate (>=1.4.0,<2.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "protobuf (>=6.30.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "translate", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
